# heliclockter

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  default.nix  pyproject.toml  release.nix
.semaphore/: publish-or-perish.sh  semaphore.yml
nix/: heliclockter.nix  nixpkgs-pinned.nix  overlay.nix  package.nix  python-overlay.nix  sources.json
src/: heliclockter.py
src/heliclockter/: __init__.py  systemtz.py
tests/: assertion_test.py  astimezone_and_pickling_test.py  astimezone_test.py  conftest.py  correct_datetime_handling_test.py  instantiation_test.py  mutation_test.py  pickling_test.py  pydantic_parsing_test.py  pydantic_serialization_test.py  pydantic_v1_parsing_test.py  serialization_test.py  shared.py
